--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -1,48 +1,43 @@
+# Бэкенд-сервер (Laravel API)
 server {
-    listen 80;
+    listen 8000;
     server_name 83.222.18.198;
 
-    # Бэкенд (Laravel)
     root /var/www/public;
     index index.php;
 
-    # Фронтенд (Next.js)
     location / {
-        # Пробуем сначала отдать статику из Laravel, затем проксируем на Next.js
-        try_files $uri @frontend;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Обработка PHP для бэкенда
     location ~ \.php$ {
         fastcgi_pass backend:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
     }
 
-    # Прокси на фронтенд
-    location @frontend {
+    error_log /var/log/nginx/api_error.log;
+    access_log /var/log/nginx/api_access.log;
+}
+
+# Фронтенд-сервер (Next.js)
+server {
+    listen 80;
+    server_name 83.222.18.198;
+
+    location / {
         proxy_pass http://frontend:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
     }
 
-    # Статика фронтенда (если нужно)
     location /_next/static {
         proxy_pass http://frontend:3000;
         expires 1y;
         add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    location ~ /\.ht {
-        deny all;
-    }
-
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/frontend_error.log;
+    access_log /var/log/nginx/frontend_access.log;
 }
