--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -14,6 +14,10 @@ server {
         fastcgi_pass backend:9000;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        add_header 'Access-Control-Allow-Origin' 'http://83.222.18.198';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
     }
 
     error_log /var/log/nginx/api_error.log;
